--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,24 @@
 page-home {
+    .card-content-md {
+        padding: 0;
+    }
+    .card-md {
+        border-radius: 10px;
+    }
 
+    p {
+        text-align: center;
+    }
+   
+        #PictureNoRides {
+           font-size: 120px;
+           margin-top: 10px;
+           margin-bottom: 10px;
+           color:silver;
+        }
+        #AddRides {
+            font-size: 50px;
+            color:#4D8CF4;
+        }
+    
 }
